# litterbug

./: LICENSE  README.md
litterbug/: CMakeLists.txt  package.xml  setup.py
litterbug/litterbug/: config.py  default_config.yaml  gazebo.py  litterbug.py  map.py
litterbug/litterbug/items/: item.py
litterbug/msg/: ObjectSpotted.msg
